--- a/contrato.html
+++ b/contrato.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/1d159cd404.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>Contrato</title>
 </head>
 <body>
 <header class="header">
@@ -32,16 +32,6 @@
             <div class="row">
                 <div class="col-sm-5">
                     <h2><b>Contrato</b></h2>
-                </div>
-                <div class="col-sm-7">
-                    <div  class="btn-group" data-toggle="buttons">
-                        <div class="agregar">
-                            <a href="#editoEmployeeModal" class="btn btn-secondary" data-toggle="modal"><i class="fa-solid fa-circle-plus"></i> <span>Añadir nuevo evento</span></a>
-                        </div>
-                        <div class="buscar">
-                            <input type="text" class="form-control" id="myInput" onkeyup="myFunction()" placeholder="Busca el evento...">
-                        </div>						
-                    </div>
                 </div>
             </div>
         </div>
