--- a/eventos.html
+++ b/eventos.html
@@ -69,12 +69,12 @@
 						<tr>
 							<td>1</td>
 							<td>Avon</td>
-                            <td>Preserntacion de marca</td>
+                            <td>Presentacion de marca</td>
 							<td>Sin detalle</td>
 							<td>Entregar a recepciones</td>  
-                            <td>calle 20 70 #-30 prr</td>                     
-							<td>2</td>
-							<td>20045698</td>
+                            <td>calle 45 #20-07</td>                     
+							<td>15</td>
+							<td>7905399</td>
 							<td>usuario45@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
@@ -82,104 +82,104 @@
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
+							<td>2</td>
 							<td>Nike</td>
-                            <td>Preserntacion de marca</td>
+                            <td>Presentacion de marca</td>
 							<td>Sin detalle</td>
-							<td>Entregar a recepciones</td>  
-                            <td>calle 20 70 #-30 prr</td>                      
-							<td>2</td>
-							<td>20045698</td>
-							<td>usuario45@gmail.com</td>
+							<td>Sin descripcion</td>  
+                            <td>calle 53 #50-37</td>                      
+							<td>28</td>
+							<td>15972063</td>
+							<td>usuario42@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
+							<td>3</td>
 							<td>Avon</td>
-                            <td>Preserntacion de marca</td>
+                            <td>Lanzamiento productos</td>
 							<td>Sin detalle</td>
-							<td>Entregar a recepciones</td>  
-                            <td>calle 20 70 #-30 prr</td>                      
-							<td>2</td>
-							<td>20045698</td>
-							<td>usuario45@gmail.com</td>
+							<td>Entregar a gerente</td>  
+                            <td>calle 75 #52-30</td>                      
+							<td>10</td>
+							<td>21945698</td>
+							<td>usuario50@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
+							<td>4</td>
 							<td>Avon</td>
-                            <td>Preserntacion de marca</td>
+                            <td>inauguración</td>
 							<td>Sin detalle</td>
 							<td>Entregar a recepciones</td>  
-                            <td>calle 20 70 #-30 prr</td>                      
-							<td>2</td>
-							<td>20045698</td>
-							<td>usuario45@gmail.com</td>
+                            <td>calle 70 #12-30</td>                      
+							<td>39</td>
+							<td>27920423</td>
+							<td>usuario75@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
+							<td>5</td>
 							<td>Pantene</td>
-                            <td>Preserntacion de marca</td>
+                            <td>Lanzamiento productos</td>
 							<td>Sin detalle</td>
-							<td>Entregar a recepciones</td>  
-                            <td>calle 20 70 #-30 prr</td>                      
-							<td>2</td>
-							<td>20045698</td>
-							<td>usuario45@gmail.com</td>
+							<td>Entregar con firma</td>  
+                            <td>calle 63 #36-20</td>                      
+							<td>11</td>
+							<td>21817800</td>
+							<td>usuario1@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
+							<td>6</td>
 							<td>Mac</td>
-                            <td>Preserntacion de marca</td>
+                            <td>inauguración</td>
 							<td>Sin detalle</td>
-							<td>Entregar a recepciones</td>  
-                            <td>calle 20 70 #-30 prr</td>                      
-							<td>2</td>
-							<td>20045698</td>
-							<td>usuario45@gmail.com</td>
+							<td>Sin descripcion</td>  
+                            <td>calle 43 #25-2 </td>                      
+							<td>50</td>
+							<td>281714716</td>
+							<td>usuario29@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
+							<td>7</td>
 							<td>Nike</td>
-                            <td>Preserntacion de marca</td>
+                            <td>Presentacion de marca</td>
 							<td>Sin detalle</td>
-							<td>Entregar a recepciones</td>  
-                            <td>calle 20 70 #-30 prr</td>                      
-							<td>2</td>
-							<td>20045698</td>
-							<td>usuario45@gmail.com</td>
+							<td>Entregar a gerente</td>  
+                            <td>calle 51 #11-25 </td>                      
+							<td>1</td>
+							<td>49218540</td>
+							<td>usuario90@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
+							<td>8</td>
 							<td>Rebook</td>
                             <td>Preserntacion de marca</td>
 							<td>Sin detalle</td>
 							<td>Entregar a recepciones</td>  
-                            <td>calle 20 70 #-30 prr</td>                      
-							<td>2</td>
-							<td>20045698</td>
+                            <td>calle 50 #1-25 </td>                      
+							<td>30</td>
+							<td>79053298</td>
 							<td>usuario45@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
@@ -187,30 +187,30 @@
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
+							<td>9</td>
 							<td>Koaj</td>
-                            <td>Preserntacion de marca</td>
+                            <td>inauguración</td>
 							<td>Sin detalle</td>
-							<td>Entregar a recepciones</td>  
-                            <td>calle 20 70 #-30 prr</td>                      
-							<td>2</td>
-							<td>20045698</td>
-							<td>usuario45@gmail.com</td>
+							<td>Sin descripcion</td>  
+                            <td>calle 23 Sur #25-30 </td>                      
+							<td>13</td>
+							<td>70592144</td>
+							<td>usuario2@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
+							<td>10</td>
 							<td>Avon</td>
                             <td>Preserntacion de marca</td>
 							<td>Sin detalle</td>
 							<td>Entregar a recepciones</td>  
-                            <td>calle 20 70 #-30 prr</td>                      
-							<td>2</td>
-							<td>20045698</td>
-							<td>usuario45@gmail.com</td>
+                            <td>calle 35#36-30</td>                      
+							<td>39</td>
+							<td>217122928</td>
+							<td>usuario36@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -229,25 +229,31 @@
 					<h2>Editar Evento</h2>
 					<p>Editar datos del evento</p>
 					<div class="form-group">
-						<input type="text" class="form-control" name="Nombre" placeholder="Nombre" required="required">
+						<input type="text" class="form-control" name="Nombre" placeholder="Nombre Evento" required="required">
+					</div>
+					<select type="text" class="form-control" id="Tevento" placeholder="Tipo Evento" required>
+						<option value="value0">Tipo Evento</option>
+						<option value="value1">• inauguración </option>
+						<option value="value1">• Lanzamiento productos</option>
+						<option value="value1">• Presentacion de marca</option>
+					</select> 
+					<div class="form-group">
+						<input type="text" class="form-control" name="Detalles" placeholder="Detalles" required="required">
 					</div>
 					<div class="form-group">
-						<input type="date" class="form-control" name="Fecha" placeholder="Fecha de Entrega" min="2022-04-01" max="2022-05-5">
+						<input type="text" class="form-control" name="Descripcion" placeholder="Descripcion" required="required">
 					</div>
 					<div class="form-group">
-						<input type="text" class="form-control" name="Ubicacion" placeholder="Localidad o barrio" required="required">
+						<input type="text" class="form-control" name="Direccion" placeholder="Direccion Evento" required="required">
 					</div>
 					<div class="form-group">
-						<input type="text" class="form-control" name="Direccion" placeholder="Direccion" required="required">
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" name="Email" placeholder="Email" required="required">
+						<input type="number" class="form-control" name="NLocal" placeholder="Numero Local" required="required">
 					</div>
 					<div class="form-group">
 						<input type="tel" class="form-control" name="Telefono" placeholder="Telefono" required="required">
 					</div>
 					<div class="form-group">
-						<input type="text" class="form-control" name="cantidad" placeholder="Cantidad" required="required">
+						<input type="text" class="form-control" name="Email" placeholder="Email" required="required">
 					</div>
 					<div class="modal-footer">
 						<input type="button" class="btn btn-primary" data-dismiss="modal" value="Cancelar">
@@ -288,25 +294,31 @@
 						<h2>Agregar Evento</h2>
 						<p>Agregue datos del evento</p>
                         <div class="form-group">
-                            <input type="text" class="form-control" name="Nombre" placeholder="Nombre" required="required">
-                        </div>
-                        <div class="form-group">
-                            <input type="date" class="form-control" name="Fecha" placeholder="Fecha de Entrega" min="2022-04-01" max="2022-05-5">
-                        </div>
+							<input type="text" class="form-control" name="Nombre" placeholder="Nombre Evento" required="required">
+						</div>
+						<select type="text" class="form-control" id="Tevento" placeholder="Tipo Evento" required>
+							<option value="value0">Tipo Evento</option>
+							<option value="value1">• inauguración </option>
+							<option value="value1">• Lanzamiento productos</option>
+							<option value="value1">• Presentacion de marca</option>
+						</select> 
 						<div class="form-group">
-							<input type="text" class="form-control" name="Ubicacion" placeholder="Localidad o barrio" required="required">
+							<input type="text" class="form-control" name="Detalles" placeholder="Detalles" required="required">
 						</div>
-                        <div class="form-group">
-							<input type="text" class="form-control" name="Direccion" placeholder="Direccion" required="required">
+						<div class="form-group">
+							<input type="text" class="form-control" name="Descripcion" placeholder="Descripcion" required="required">
 						</div>
-                        <div class="form-group">
-							<input type="text" class="form-control" name="Email" placeholder="Email" required="required">
+						<div class="form-group">
+							<input type="text" class="form-control" name="Direccion" placeholder="Direccion Evento" required="required">
 						</div>
-                        <div class="form-group">
+						<div class="form-group">
+							<input type="number" class="form-control" name="NLocal" placeholder="Numero Local" required="required">
+						</div>
+						<div class="form-group">
 							<input type="tel" class="form-control" name="Telefono" placeholder="Telefono" required="required">
 						</div>
 						<div class="form-group">
-							<input type="text" class="form-control" name="cantidad" placeholder="Cantidad" required="required">
+							<input type="text" class="form-control" name="Email" placeholder="Email" required="required">
 						</div>
 						<div class="modal-footer">
 							<input type="button" class="btn btn-primary" data-dismiss="modal" value="Cancelar">
