--- a/historialclienteReserva.html
+++ b/historialclienteReserva.html
@@ -156,28 +156,32 @@
 					<h2>Editar Producto</h2>
 					<p>Editar datos del producto</p>
 					<div class="form-group">
-						<input type="text" class="form-control" name="nombrep" placeholder="Nombre Producto" required="required">
-					</div>
-					<div class="form-group">
-						<select type="text" class="form-control" id="categoria" placeholder="Categoria" required>
-						<option value="value0">Categoria</option>
-						<option value="value1">categoria 1</option>
-						<option value="value1">categoria 2</option>
-						<option value="value1">categoria 3</option>
-						<option value="value1">categoria 4</option>
-						<option value="value1">categoria 5</option>
-						<option value="value1">categoria 6</option>
-						<option value="value1">categoria 7</option>
+						<select type="text" class="form-control" id="TReserva" placeholder="Tipo Reserva" required>
+						<option value="value0">Tipo Reserva</option>
+						<option value="value1">• Material P.O.P</option>
+						<option value="value1">• Packing</option>
 					  </select>
 					</div>
 					<div class="form-group">
-						<input type="text" class="form-control" name="marca" placeholder="Marca" required="required">
+						<input type="number" class="form-control" name="CProductos" placeholder="Cantidad Productos" required="required">
 					</div>
 					<div class="form-group">
-						<input type="date" class="form-control" name="Fecha" placeholder="Fecha de Entrega" min="2022-04-01" max="2022-05-5">
+						<input type="text" class="form-control" name="Destinatario" placeholder="Destinatario" required="required">
 					</div>
 					<div class="form-group">
-						<input type="text" class="form-control" name="cantidad" placeholder="Cantidad" required="required">
+						<input type="text" class="form-control" name="Ciudad" placeholder="Ciudad" required="required">
+					</div>
+					<div class="form-group">
+						<input type="text" class="form-control" name="Direccion" placeholder="Direccion" required="required">
+					</div>
+					<div class="form-group">
+						<input type="tel" class="form-control" name="Telefono" placeholder="Telefono" required="required">
+					</div>
+					<div class="form-group">
+						<input type="text" class="form-control" name="Destinatario" placeholder="Destinatario" required="required">
+					</div>
+					<div class="form-group">
+						<input type="date" class="form-control" name="E-mail" placeholder="E-mail" min="2022-01-01" max="2023-01-01">
 					</div>
 					<div class="modal-footer">
 						<input type="button" class="btn btn-primary" data-dismiss="modal" value="Cancelar">
