--- a/proveedores.html
+++ b/proveedores.html
@@ -62,7 +62,7 @@
 						<tr data-status="Activo">
 							<td>1</td>
 							<td>Material P.O.P</td>
-							<td>Nombre 1 nombre2</td>
+							<td>NombreApellido</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
 							<!-- <td><span class="status text-success">&bull;</span> Activo </td> -->
@@ -74,7 +74,7 @@
 						<tr data-status="Activo">
 							<td>2</td>
 							<td>Productos</td>
-							<td>Nombre 1 nombre2</td>
+							<td>NombreApellido</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
 							<!-- <td><span class="status text-success">&bull;</span> Activo </td> -->
@@ -86,7 +86,7 @@
 						<tr data-status="Bloqueado">
 							<td>3</td>
 							<td>Mobiliario</td>
-							<td>Nombre 1 nombre2</td>
+							<td>NombreApellido</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
 							<!-- <td><span class="status text-danger">&bull;</span> Bloqueado </td>   -->                    
@@ -98,7 +98,7 @@
 						<tr data-status="Activo">
 							<td>4</td>
 							<td>Distribuidor Nacional</td>
-							<td>Nombre 1 nombre2</td>
+							<td>NombreApellido</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
 							<!-- <td><span class="status text-success">&bull;</span> Activo</td> -->
@@ -110,7 +110,7 @@
 						<tr data-status="Activo">
 							<td>5</td>
 							<td>Distribuidor Nacional</td>
-							<td>Nombre 1 nombre2</td>
+							<td>NombreApellido</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
 							<!-- <td><span class="status text-success">&bull;</span> Activo </td> -->
@@ -122,7 +122,7 @@
 						<tr data-status="Bloqueado">
 							<td>6</td>
 							<td>Mobiliario</td>
-							<td>Nombre 1 nombre2</td>
+							<td>NombreApellido</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
 							<!-- <td><span class="status text-danger">&bull;</span>Bloqueado </td> -->
@@ -134,7 +134,7 @@
 						<tr data-status="Bloqueado">
 							<td>7</td>
 							<td>Material P.O.P</td>
-							<td>Nombre 1 nombre2</td>
+							<td>NombreApellido</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
 							<!-- <td><span class="status text-danger">&bull;</span> Bloqueado</td> -->
@@ -146,7 +146,7 @@
 						<tr data-status="Bloqueado">
 							<td>8</td>
 							<td>Productos</td>
-							<td>Nombre 1 nombre2</td>
+							<td>NombreApellido</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
 							<!-- <td><span class="status text-danger">&bull;</span> Bloqueado </td> -->
@@ -158,7 +158,7 @@
 						<tr data-status="Activo">
 							<td>9</td>
 							<td>Productos</td>
-							<td>Nombre 1 nombre2</td>
+							<td>NombreApellido</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
 							<!-- <td><span class="status text-success">&bull;</span> Activo </td> -->
@@ -170,7 +170,7 @@
 						<tr data-status="Activo">
 							<td>10</td>
 							<td>Material P.O.P</td>
-							<td>Nombre 1 nombre2</td>
+							<td>NombreApellido</td>
 							<td>ejemplo@gmail.com</td>
 							<td>123456789</td>
 							<!-- <td><span class="status text-success">&bull;</span> Activo </td> -->
@@ -203,24 +203,15 @@
 							</select>   
 						</div> 
 						<div class="form-group">
-                            <input type="text" class="form-control" name="Nombres" placeholder="Nombres" required="required">
-                        </div>
-						<div class="form-group">
-                            <input type="text" class="form-control" name="Apellidos" placeholder="Apellidos" required="required">
+                            <input type="text" class="form-control" name="Nombres" placeholder="Nombre y Apellido" required="required">
                         </div>
 						<div class="form-group">
 							<input type="email" class="form-control" name="email" placeholder="Email" required="required">
 						</div>
 						<div class="form-group">
 							<input type="tel" class="form-control" name="Telefono" placeholder="Telefono" required="required">
-						</div>
-						<select type="text" class="form-control" id="estado" placeholder="Estado" required>
-							<option value="value0">Estado</option>
-							<option value="value1">• Activo</option>
-							<option value="value1">• Bloqueado</option>
-						</select>   						
-					</div>
-					
+						</div> 						
+					</div>			
 					<div class="modal-footer">
 						<input type="button" class="btn btn-primary" data-dismiss="modal" value="Cancelar">
 						<input type="submit" class="btn btn-danger" value="Agregar">
@@ -260,31 +251,25 @@
 						<h2>Agregar Proveedor</h2>
 						<p>Agregue datos del proveedor</p>
 						<div class="form-group">
-							<select type="text" class="form-control" id="proveedor" placeholder="Proveedor" required>
-							    <option value="value0">Tipo Proveedor</option>
-								<option value="value1">Material P.O.P</option>
-								<option value="value1">Mobiliario</option>
-								<option value="value1">Productos</option>
-								<option value="value1">Distribuidor Nacional</option>
-							</select>   
-						</div>   	
-						<div class="form-group">
-                            <input type="text" class="form-control" name="Nombres" placeholder="Nombres" required="required">
-                        </div>
-						<div class="form-group">
-                            <input type="text" class="form-control" name="Apellidos" placeholder="Apellidos" required="required">
-                        </div>
-						<div class="form-group">
-							<input type="email" class="form-control" name="email" placeholder="Email" required="required">
-						</div>
-						<div class="form-group">
-							<input type="tel" class="form-control" name="Telefono" placeholder="Telefono" required="required">
-						</div>
-						<select type="text" class="form-control" id="estado" placeholder="Estado" required>
-							<option value="value0">Estado</option>
-							<option value="value1">• Activo</option>
-							<option value="value1">• Bloqueado</option>
-						</select>   
+							<div class="form-group">
+								<select type="text" class="form-control" id="proveedor" placeholder="Proveedor" required>
+									<option value="value0">Tipo Proveedor</option>
+									<option value="value1">• Material P.O.P</option>
+									<option value="value1">• Mobiliario</option>
+									<option value="value1">• Productos</option>
+									<option value="value1">• Distribuidor Nacional</option>
+								</select>   
+							</div> 
+							<div class="form-group">
+								<input type="text" class="form-control" name="Nombres" placeholder="Nombre y Apellido" required="required">
+							</div>
+							<div class="form-group">
+								<input type="email" class="form-control" name="email" placeholder="Email" required="required">
+							</div>
+							<div class="form-group">
+								<input type="tel" class="form-control" name="Telefono" placeholder="Telefono" required="required">
+							</div> 						
+						</div>			
 						<div class="modal-footer">
 							<input type="button" class="btn btn-primary" data-dismiss="modal" value="Cancelar">
 							<input type="submit" class="btn btn-danger" value="Agregar">
