--- a/inventarios.html
+++ b/inventarios.html
@@ -62,7 +62,7 @@
 					<tbody>
 						<tr>
 							<td>1</td>
-							<td>22</td>
+							<td>50</td>
 							<td>Esmaltes</td>
 							<td>Cosmeticos</td>                        
 							<td>02/11/2022</td>
@@ -73,8 +73,8 @@
 						</tr>
 						<tr>
 							<td>2</td>
-							<td>22</td>
-							<td>Labail</td>
+							<td>20</td>
+							<td>Labial</td>
 							<td>Cosmeticos</td>                        
 							<td>02/11/2022</td>
 							<td>
@@ -128,7 +128,7 @@
 						</tr>
 						<tr>
 							<td>7</td>
-							<td>22</td>
+							<td>5</td>
 							<td>Desodorante</td>
 							<td>Cuidado personal</td>                        
 							<td>02/11/2022</td>
@@ -139,8 +139,8 @@
 						</tr>
 						<tr>
 							<td>8</td>
-                            <td>22</td>
-							<td>Labail</td>
+                            <td>25</td>
+							<td>Labial</td>
 							<td>Cosmeticos</td>                        
 							<td>02/11/2022</td>
 							<td>
@@ -150,7 +150,7 @@
 						</tr>
 						<tr>
 							<td>9</td>
-							<td>36</td>
+							<td>60</td>
 							<td>Cremas</td>
 							<td>Cosmeticos</td>                        
 							<td>02/11/2022</td>
@@ -161,7 +161,7 @@
 						</tr>
 						<tr>
 							<td>10</td>
-							<td>22</td>
+							<td>50</td>
 							<td>Crema dental</td>
 							<td>Cuidado personal</td>                        
 							<td>02/11/2022</td>
@@ -172,7 +172,7 @@
 						</tr>
 						<tr>
 							<td>11</td>
-							<td>22</td>
+							<td>25</td>
 							<td>Shampù</td>
 							<td>Cuidado personal</td>                        
 							<td>02/11/2022</td>
@@ -194,28 +194,16 @@
 					<h2>Editar Producto</h2>
 					<p>Editar datos del producto</p>
 					<div class="form-group">
-						<input type="text" class="form-control" name="nombrep" placeholder="Nombre Producto" required="required">
+						<input type="number" class="form-control" name="Cantidad" placeholder="Cantidad" required="required">
 					</div>
 					<div class="form-group">
-						<select type="text" class="form-control" id="categoria" placeholder="Categoria" required>
-						<option value="value0">Categoria</option>
-						<option value="value1">categoria 1</option>
-						<option value="value1">categoria 2</option>
-						<option value="value1">categoria 3</option>
-						<option value="value1">categoria 4</option>
-						<option value="value1">categoria 5</option>
-						<option value="value1">categoria 6</option>
-						<option value="value1">categoria 7</option>
-					  </select>
+						<input type="text" class="form-control" name="Producto" placeholder="Producto" required="required">
 					</div>
 					<div class="form-group">
-						<input type="text" class="form-control" name="marca" placeholder="Marca" required="required">
+						<input type="text" class="form-control" name="categoria" placeholder="Categoria" required="required">
 					</div>
 					<div class="form-group">
-						<input type="date" class="form-control" name="Fecha" placeholder="Fecha de Entrega" min="2022-04-01" max="2022-05-5">
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" name="cantidad" placeholder="Cantidad" required="required">
+						<input type="date" class="form-control" name="Fecha" placeholder="Fecha de Entrega" min="2022-01-01" max="2023-01-01">
 					</div>
 					<div class="modal-footer">
 						<input type="button" class="btn btn-primary" data-dismiss="modal" value="Cancelar">
@@ -256,28 +244,16 @@
 						<h2>Agregar Producto</h2>
 						<p>Agregue datos del producto</p>
                         <div class="form-group">
-                            <input type="text" class="form-control" name="nombrep" placeholder="Nombre Producto" required="required">
-                        </div>
-                        <div class="form-group">
-                            <select type="text" class="form-control" id="categoria" placeholder="Categoria" required>
-                            <option value="value0">Categoria</option>
-                            <option value="value1">categoria 1</option>
-                            <option value="value1">categoria 2</option>
-                            <option value="value1">categoria 3</option>
-                            <option value="value1">categoria 4</option>
-                            <option value="value1">categoria 5</option>
-                            <option value="value1">categoria 6</option>
-                            <option value="value1">categoria 7</option>
-                          </select>
-                        </div>
-						<div class="form-group">
-							<input type="text" class="form-control" name="marca" placeholder="Marca" required="required">
+							<input type="number" class="form-control" name="Cantidad" placeholder="Cantidad" required="required">
 						</div>
-                        <div class="form-group">
-                            <input type="date" class="form-control" name="Fecha" placeholder="Fecha de Entrega" min="2022-04-01" max="2022-05-5">
-                        </div>
 						<div class="form-group">
-							<input type="text" class="form-control" name="cantidad" placeholder="Cantidad" required="required">
+							<input type="text" class="form-control" name="Producto" placeholder="Producto" required="required">
+						</div>
+						<div class="form-group">
+							<input type="text" class="form-control" name="categoria" placeholder="Categoria" required="required">
+						</div>
+						<div class="form-group">
+							<input type="date" class="form-control" name="Fecha" placeholder="Fecha de Entrega" min="2022-01-01" max="2023-01-01">
 						</div>
 						<div class="modal-footer">
 							<input type="button" class="btn btn-primary" data-dismiss="modal" value="Cancelar">
