--- a/inventariosGe.html
+++ b/inventariosGe.html
@@ -195,28 +195,16 @@
 					<h2>Editar Producto</h2>
 					<p>Editar datos del producto</p>
 					<div class="form-group">
-						<input type="text" class="form-control" name="nombrep" placeholder="Nombre Producto" required="required">
+						<input type="number" class="form-control" name="Cantidad" placeholder="Cantidad" required="required">
 					</div>
 					<div class="form-group">
-						<select type="text" class="form-control" id="categoria" placeholder="Categoria" required>
-						<option value="value0">Categoria</option>
-						<option value="value1">categoria 1</option>
-						<option value="value1">categoria 2</option>
-						<option value="value1">categoria 3</option>
-						<option value="value1">categoria 4</option>
-						<option value="value1">categoria 5</option>
-						<option value="value1">categoria 6</option>
-						<option value="value1">categoria 7</option>
-					  </select>
+						<input type="text" class="form-control" name="Producto" placeholder="Producto" required="required">
 					</div>
 					<div class="form-group">
-						<input type="text" class="form-control" name="marca" placeholder="Marca" required="required">
+						<input type="text" class="form-control" name="Categoria" placeholder="Categoria" required="required">
 					</div>
 					<div class="form-group">
-						<input type="date" class="form-control" name="Fecha" placeholder="Fecha de Entrega" min="2022-04-01" max="2022-05-5">
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" name="cantidad" placeholder="Cantidad" required="required">
+						<input type="date" class="form-control" name="Fecha" placeholder="Fecha de Entrega" min="2022-01-01" max="2023-01-01">
 					</div>
 					<div class="modal-footer">
 						<input type="button" class="btn btn-primary" data-dismiss="modal" value="Cancelar">
@@ -256,29 +244,17 @@
 					<form action="" method="post">
 						<h2>Agregar Producto</h2>
 						<p>Agregue datos del producto</p>
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="nombrep" placeholder="Nombre Producto" required="required">
-                        </div>
-                        <div class="form-group">
-                            <select type="text" class="form-control" id="categoria" placeholder="Categoria" required>
-                            <option value="value0">Categoria</option>
-                            <option value="value1">categoria 1</option>
-                            <option value="value1">categoria 2</option>
-                            <option value="value1">categoria 3</option>
-                            <option value="value1">categoria 4</option>
-                            <option value="value1">categoria 5</option>
-                            <option value="value1">categoria 6</option>
-                            <option value="value1">categoria 7</option>
-                          </select>
-                        </div>
 						<div class="form-group">
-							<input type="text" class="form-control" name="marca" placeholder="Marca" required="required">
+							<input type="number" class="form-control" name="Cantidad" placeholder="Cantidad" required="required">
 						</div>
-                        <div class="form-group">
-                            <input type="date" class="form-control" name="Fecha" placeholder="Fecha de Entrega" min="2022-04-01" max="2022-05-5">
-                        </div>
 						<div class="form-group">
-							<input type="text" class="form-control" name="cantidad" placeholder="Cantidad" required="required">
+							<input type="text" class="form-control" name="Producto" placeholder="Producto" required="required">
+						</div>
+						<div class="form-group">
+							<input type="text" class="form-control" name="Categoria" placeholder="Categoria" required="required">
+						</div>
+						<div class="form-group">
+							<input type="date" class="form-control" name="Fecha" placeholder="Fecha de Entrega" min="2022-01-01" max="2023-01-01">
 						</div>
 						<div class="modal-footer">
 							<input type="button" class="btn btn-primary" data-dismiss="modal" value="Cancelar">
